# ReKep

./: .envrc  .gitignore  constraint_generation_seec.py  environment.py  keypoint_proposal.py  main.py  og_utils.py  pixi.toml  transform_utils.py  utils.py
configs/: config.yaml  og_scene_file_pen.json
seec/: pyproject.toml  test_seec.py
seec/seec/modules/: agent.py  codegen_actor.py  codegen_cricit.py  codegen_static_check.py  high_level_actor.py  high_level_critic.py  low_level_actor.py  low_level_critic.py  states.py
seec/seec/services/: llm_service.py  state.py
